package dominio.ropa;

public enum CategoriaPrenda {

  PARTE_SUPERIOR, CALZADO, PARTE_INFERIOR, ACCESORIO
}
