package ropa;

public enum Trama {
  LISA, RAYADA, CON_LUNARES, A_CUADROS, ESTAMPADO
}
